tests/test_variable_state/bad/def_no_state.catala_en
## Test

```catala
declaration scope A:
  output foo content integer
    state bar
    state baz

scope A:
  definition foo equals 2
```
